# ProductAIFlows

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: competitor-researcher.md  notion-researcher.md  notion-writer.md  py-visualization-writer.md  strategy-reviewer.md  strategy-writer.md
.claude/agents/py-visualization-writer/: prompt.md
.claude/skills/analyze/: SKILL.md
.claude/skills/strategy-doc/: SKILL.md
.claude/skills/test-thinking/: SKILL.md
docs/demo-db/: schema.md
mcp_servers/demo-data/: README.md  sample_data.db  server.py  setup_sample_data.py
scripts/: cleanup_tmp.py
