[tool.poetry]
name = "productai"
version = "0.1.0"
description = "AI-powered workflow automation toolkit for product analytics"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.13.0"
mcp = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
